fix footer spacing

--- a/wp-content/plugins/raffle-leader/assets/css/preview_default_style.css
+++ b/wp-content/plugins/raffle-leader/assets/css/preview_default_style.css
@@ -177,7 +177,7 @@
 .raffleleader-footer{
     display: flex;
     flex-direction: row;
-    margin-top: 17px;
+    margin: 5px 0px;
     justify-content: center;
     align-items: center;
     width: 100%;
